--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 // 環境変数の書き方
 // Ex)PORT = 5432
-TEST222 = test222
+
+// DB関係
+DB_username = "wsluser",
+DB_password = "postgre",
+DB_database = "knowledge2",
+DB_host = "127.0.0.1",
+DB_dialect = "postgres"
