--- a/config/config.json
+++ b/config/config.json
@@ -1,14 +1,29 @@
 {
   "development": {
     "use_env_variable": "DATABASE_URL",
-    "ssl": true
+    "dialectOptions": {
+      "ssl": {
+        "require": true,
+        "rejectUnauthorized": false
+      }
+    }
   },
   "test": {
     "use_env_variable": "DATABASE_URL",
-    "ssl": true
+    "dialectOptions": {
+      "ssl": {
+        "require": true,
+        "rejectUnauthorized": false
+      }
+    }
   },
   "production": {
     "use_env_variable": "DATABASE_URL",
-    "ssl": true
+    "dialectOptions": {
+      "ssl": {
+        "require": true,
+        "rejectUnauthorized": false
+      }
+    }
   }
 }
