--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "start": "node ./bin/www",
     "dev": "env-cmd -f ./.env node ./bin/www"
   },
+  "engines": {
+    "node": "14.x"
+  },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
