--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "env-cmd -f ./.env node ./bin/www"
   },
   "engines": {
-    "node": "14.x"
+    "node": "14.x",
+    "npm": "7.20.x"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
