--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "~4.16.1",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.2",
+    "express-sslify": "^1.2.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "pg": "^8.7.3",
