--- a/config/config.json
+++ b/config/config.json
@@ -1,12 +1,10 @@
 {
   "development": {
-    "use_env_variable": "DATABASE_URL",
-    "dialectOptions": {
-      "ssl": {
-        "require": true,
-        "rejectUnauthorized": false
-      }
-    }
+    "username": "wsluser",
+"password": "postgre",
+"database": "knowledge2",
+"host": "127.0.0.1",
+"dialect": "postgres"
   },
   "test": {
     "use_env_variable": "DATABASE_URL",
